# ipa_rubbish_bin_detection

./: CMakeLists.txt  LICENSE  ReadMe.md  package.xml
cfg/: ipa_rubbish_bin_detection.cfg
common/include/ipa_rubbish_bin_detection/: shape_estimation.hpp
common/src/: shape_estimation.cpp
launch/: ipa_rubbish_bin_detection.launch
msgs/: CylinderParams.msg
ros/: wastebasket_detection.cpp  wastebasket_detection.hpp
